# iMuJoCo

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  Local.xcconfig.template  MODULE.bazel  PRIVACY.md  README.md  TODO.md  extensions.bzl  pyproject.toml  setup.sh
.githooks/: pre-commit
.github/workflows/: secrets-check.yml
app/: app.xcconfig
app/app/: app.swift  fullscreen_simulation_view.swift  simulation_cell_view.swift  simulation_grid_view.swift  simulation_manager.swift
app/app.xcodeproj/: project.pbxproj
app/app/Assets.xcassets/AppIcon.appiconset/: Contents.json
app/app/Resources/Models/: humanoid.xml  simple_pendulum.xml
app/app_tests/: app_tests.swift
app/app_ui_tests/: app_ui_tests.swift  app_ui_tests_launch_tests.swift
benchmarks/: BUILD.bazel  bm_flatbuffers.cc  bm_fragment.cc  bm_metal_render.mm  bm_video_pipeline.mm  validate_pipeline.mm
cmake/mujoco/: CMakeLists.txt
cmake/toolchains/: ios.toolchain.cmake  macos.toolchain.cmake  tvos.toolchain.cmake
core/: core.xcconfig
core/core/: core.swift  mjc_physics_runtime.h  mjc_physics_runtime.mm  mjc_runtime.swift  module.modulemap  mujoco_error.swift
core/core.xcodeproj/: project.pbxproj
core/core.xcodeproj/xcshareddata/xcschemes/: mujoco-build.xcscheme
core/core_tests/: core_tests.swift
driver/: .gitignore  BUILD.bazel  CMakeLists.txt  README.md  pyproject.toml  setup.py
driver/cc/examples/: echo_server.cc  simple_control.cc
driver/cc/include/imujoco/driver/: args.h  driver.h  video_receiver.h
driver/cc/src/: driver.cc  fragment.cc  fragment.h  udp_socket.h  video_receiver.cc
driver/cc/tests/: driver_test.cc  fragment_test.cc  video_receiver_test.cc
driver/examples/: car_driver.py  simple_control.py  unitree_g1_driver.py  video_e2e_test.py  video_receiver_test.py
driver/imujoco_driver/: BUILD.bazel  bindings.cc
driver/python/: __init__.py  bindings.cc
iMuJoCo/app/: app.xcconfig
iMuJoCo/app/app/: content_view.swift  simulation_manager.swift
iMuJoCo/app/app.xcodeproj/: project.pbxproj
iMuJoCo/core/: core.xcconfig
iMuJoCo/core/core/: core.swift  mjc_fragment.h  mjc_fragment.mm  mjc_physics_runtime.h  mjc_physics_runtime.mm  mjc_runtime.swift  module.modulemap
iMuJoCo/core/core.xcodeproj/: project.pbxproj
iMuJoCo/core/core_tests/: core_tests.swift  flatbuffers_tests.mm  fragment_tests.mm
iMuJoCo/render/: render.xcconfig
iMuJoCo/render/render/: mjc_metal_render.swift  mjc_metal_view.swift
iMuJoCo/render/render.xcodeproj/: project.pbxproj
iMuJoCo/render/render.xcodeproj/xcshareddata/xcschemes/: render.xcscheme
imujoco/: local.xcconfig.template
imujoco.xcworkspace/: contents.xcworkspacedata
imujoco/app/: BUILD.bazel  Info.plist  app.xcconfig  team_config.bzl.template
imujoco/app/app/: app.swift  content_view.swift  fullscreen_simulation_view.swift  performance_stats_bar.swift  simulation_cell_view.swift  simulation_grid_view.swift  simulation_manager.swift
imujoco/app/app.xcodeproj/: project.pbxproj
imujoco/app/app/AppIcon.icon/: icon.json
imujoco/app/app_ui_tests/: app_ui_tests_launch_tests.swift
imujoco/app/profiles/: README.md
imujoco/core/: BUILD.bazel  core.xcconfig
imujoco/core/core/: mjc_fragment.mm  mjc_physics_runtime.h  mjc_physics_runtime.mm  mjc_runtime.swift  spmc_queue.h  spsc_queue.h
imujoco/core/core.xcodeproj/: project.pbxproj
imujoco/core/core_tests/: spmc_queue_tests.cc  spmc_queue_tests.mm  spsc_queue_tests.mm
imujoco/render/: BUILD.bazel  render.xcconfig
imujoco/render/render/: mjc_metal_render.swift  mjc_metal_view.swift  mujoco_shaders.metal
imujoco/render/render.xcodeproj/: project.pbxproj
imujoco/video/: BUILD.bazel
imujoco/video/video/: mjc_jpeg_encoder.swift  mjc_offscreen_render.swift  mjc_video_encoder.swift  mjc_video_mjpeg_server.h  mjc_video_mjpeg_server.mm  mjc_video_rtp_transport.h  mjc_video_rtp_transport.mm  mjc_video_rtsp_server.h  mjc_video_rtsp_server.mm  mjc_video_streamer.swift  mjc_video_transport.h  mjc_video_types.h  mjc_video_udp_transport.h  mjc_video_udp_transport.mm  module.modulemap
models/: BUILD.bazel  humanoid_supine.xml  simple_pendulum.xml
render/: render.xcconfig
render/render/: mj_metal_renderer.swift  mjc_metal_renderer.swift  mjc_metal_view.swift  mujoco_metal_view.swift  mujoco_shaders.metal  render.swift
render/render.xcodeproj/: project.pbxproj
render/render_tests/: render_tests.swift
schema/: BUILD.bazel  README.md  control.fbs  state.fbs
schema/mujoco/: control.fbs  state.fbs
scripts/: build_mujoco.sh  build_mujoco_xcframework.sh  generate_flatbuffers.sh
