[project]
name = "imujoco"
version = "0.1.0"
description = "iMuJoCo - MuJoCo simulation with network streaming"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
