load("@rules_cc//cc:defs.bzl", "cc_binary", "objc_library")

# ============================================================================
# Benchmarks (run with: bazel run //benchmarks:<target> --config=release)
# ============================================================================

cc_binary(
    name = "bm_fragment",
    srcs = ["bm_fragment.cc"],
    includes = ["../driver/cc/src"],
    deps = [
        "//driver:mujoco_driver",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_binary(
    name = "bm_flatbuffers",
    srcs = ["bm_flatbuffers.cc"],
    deps = [
        "//schema:driver_schemas",
        "@flatbuffers//:runtime_cc",
        "@google_benchmark//:benchmark_main",
    ],
)

objc_library(
    name = "bm_video_pipeline_lib",
    srcs = ["bm_video_pipeline.mm"],
    copts = ["-std=c++20"],
    includes = ["../imujoco/video/video"],
    sdk_frameworks = [
        "CoreGraphics",
        "ImageIO",
    ],
    deps = [
        "//imujoco/video:video_cpp",
        "@google_benchmark//:benchmark",
    ],
)

cc_binary(
    name = "bm_video_pipeline",
    deps = [
        ":bm_video_pipeline_lib",
        "@google_benchmark//:benchmark_main",
    ],
)

objc_library(
    name = "bm_metal_render_lib",
    srcs = ["bm_metal_render.mm"],
    copts = ["-std=c++20"],
    sdk_frameworks = [
        "Metal",
    ],
    deps = [
        "@google_benchmark//:benchmark",
    ],
)

cc_binary(
    name = "bm_metal_render",
    deps = [
        ":bm_metal_render_lib",
        "@google_benchmark//:benchmark_main",
    ],
)
