[build-system]
requires = ["setuptools>=61", "pybind11>=2.13"]
build-backend = "setuptools.build_meta"

[project]
name = "imujoco-driver"
version = "0.1.0"
description = "Python driver for iMuJoCo - UDP client for MuJoCo simulation on iOS"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "iMuJoCo Team"}
]
keywords = ["mujoco", "simulation", "robotics", "physics", "udp", "ios"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[tool.setuptools]
packages = ["imujoco_driver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
