load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@rules_apple//apple:apple.bzl", "local_provisioning_profile")
load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_apple//apple:macos.bzl", "macos_application")
load("@rules_apple//apple:resources.bzl", "apple_resource_group")
load("@rules_apple//apple:tvos.bzl", "tvos_application")
load("@rules_xcodeproj//xcodeproj:xcode_provisioning_profile.bzl", "xcode_provisioning_profile")
load(":team_config.bzl", "TEAM_ID")

# ============================================================================
# App Swift library
# ============================================================================

swift_library(
    name = "app_lib",
    srcs = [
        "app/app.swift",
        "app/content_view.swift",
        "app/fullscreen_simulation_view.swift",
        "app/simulation_cell_view.swift",
        "app/simulation_grid_view.swift",
        "app/simulation_manager.swift",
    ],
    copts = ["-cxx-interoperability-mode=default"],
    data = [
        ":menagerie_models",
        ":mujoco_models",
    ],
    module_name = "app",
    deps = [
        "//imujoco/core",
        "//imujoco/core:core_cpp",
        "//imujoco/render",
        "@mujoco//:mujoco",
    ],
)

# ============================================================================
# Provisioning profile (for device deployment via Xcode)
# ============================================================================

local_provisioning_profile(
    name = "local_profile",
    profile_name = "iOS Team Provisioning Profile: *",
    team_id = TEAM_ID,
)

xcode_provisioning_profile(
    name = "xcode_profile",
    managed_by_xcode = True,
    provisioning_profile = ":local_profile",
    team_id = TEAM_ID,
)

# ============================================================================
# Menagerie robot models (directory structure must be preserved for MuJoCo)
# ============================================================================

apple_resource_group(
    name = "menagerie_models",
    structured_resources = [
        "@mujoco_menagerie//:unitree_g1",
        "@mujoco_menagerie//:unitree_h1",
    ],
)

apple_resource_group(
    name = "mujoco_models",
    structured_resources = [
        "@mujoco//:car_model",
        "@mujoco//:humanoid_model",
    ],
)

# ============================================================================
# iOS application
# ============================================================================

ios_application(
    name = "app",
    app_icons = glob(["app/AppIcon.icon/**"]),
    bundle_id = "com.hhkblogi.imujoco.app",
    entitlements = "app_ios.entitlements",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Info.plist"],
    minimum_os_version = "26.0",
    provisioning_profile = ":xcode_profile",
    resources = glob(["app/Assets.xcassets/**"]) + [
        "app/PrivacyInfo.xcprivacy",
        "//models",
        "//imujoco/render:mujoco_metallib",
    ],
    visibility = ["//visibility:public"],
    deps = [":app_lib"],
)

# ============================================================================
# macOS application (optional)
# ============================================================================

macos_application(
    name = "app_macos",
    app_icons = glob(["app/AppIcon.icon/**"]),
    bundle_id = "com.hhkblogi.imujoco.app",
    entitlements = "app.entitlements",
    infoplists = ["Info.plist"],
    minimum_os_version = "26.0",
    resources = glob(["app/Assets.xcassets/**"]) + [
        "app/PrivacyInfo.xcprivacy",
        "//models",
        "//imujoco/render:mujoco_metallib",
    ],
    deps = [":app_lib"],
)

# ============================================================================
# tvOS application (optional)
# ============================================================================

tvos_application(
    name = "app_tvos",
    bundle_id = "com.hhkblogi.imujoco.app",
    entitlements = "app_ios.entitlements",
    infoplists = ["Info.plist"],
    minimum_os_version = "26.0",
    resources = glob(["app/Assets.xcassets/**"]) + [
        "app/PrivacyInfo.xcprivacy",
        "//models",
        "//imujoco/render:mujoco_metallib",
    ],
    deps = [":app_lib"],
)
